[workspace]
members = [".", "examples"]

[package]
name = "mkqhs"
version = "0.1.0"
edition = "2024"

[dev-dependencies]
criterion = { version = "0.8", features = ["html_reports"] }
criterion-cycles-per-byte = "0.8"

[[bench]]
name = "mkqhs_cbr_msq_cycles"
harness = false

[[bench]]
name = "mklhs_cycles"
harness = false

[[bench]]
name = "artifact_sizes"
harness = false

[dependencies]
ark-bls12-381 = "0.5.0"
ark-ec = "0.5.0"
ark-ff = "0.5.0"
ark-serialize = "0.5.0"
ark-std = "0.5.0"
rand = "0.8"
sha2 = "0.10.9"
thiserror = "2.0.18"
